--- a/contracts/.gitignore
+++ b/contracts/.gitignore
@@ -1,14 +1,22 @@
 node_modules
 .env
+coverage
+coverage.json
+typechain
+typechain-types
+.deployment/localhost.json
+.openzeppelin/unknown-1337.json
 
 # Hardhat files
-/cache
-/artifacts
+cache
+artifacts
 
-# TypeChain files
-/typechain
-/typechain-types
+.DS_store
 
-# solidity-coverage files
-/coverage
-/coverage.json
+# GSN local build files
+build
+
+# Editor's folders
+.idea/
+
+whitelist*
