--- a/subgraph/genie-ai/subgraph.yaml
+++ b/subgraph/genie-ai/subgraph.yaml
@@ -6,25 +6,85 @@ dataSources:
     name: Contract
     network: mumbai
     source:
-      address: "0x23b8Ec6955b0dEC2Fb6d08291ab745Cdd79a44bf"
+      address: "0x9123FA9a8006f4Fb99E7C786222b710Ed6567700"
       abi: Contract
-      startBlock: 42520686
+      startBlock: 42520405
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
         - AdminChanged
+        - Approval
+        - ApprovalForAll
+        - ArbitrationFeeTimeoutUpdated
+        - ArbitratorUpdated
         - BeaconUpgraded
+        - CidUpdated
+        - Initialized
+        - MinArbitrationFeeTimeoutUpdated
+        - Mint
+        - MintFeeUpdated
+        - MintStatusUpdated
+        - OriginServiceFeeRateUpdated
+        - OriginValidatedProposalFeeRateUpdated
+        - ProposalPostingFeeUpdated
+        - RoleAdminChanged
+        - RoleGranted
+        - RoleRevoked
+        - ServicePostingFeeUpdated
+        - SignerUpdated
+        - Transfer
         - Upgraded
+        - UserWhitelisted
       abis:
         - name: Contract
           file: ./abis/Contract.json
       eventHandlers:
         - event: AdminChanged(address,address)
           handler: handleAdminChanged
+        - event: Approval(indexed address,indexed address,indexed uint256)
+          handler: handleApproval
+        - event: ApprovalForAll(indexed address,indexed address,bool)
+          handler: handleApprovalForAll
+        - event: ArbitrationFeeTimeoutUpdated(uint256,uint256)
+          handler: handleArbitrationFeeTimeoutUpdated
+        - event: ArbitratorUpdated(uint256,address,bytes)
+          handler: handleArbitratorUpdated
         - event: BeaconUpgraded(indexed address)
           handler: handleBeaconUpgraded
+        - event: CidUpdated(indexed uint256,string)
+          handler: handleCidUpdated
+        - event: Initialized(uint8)
+          handler: handleInitialized
+        - event: MinArbitrationFeeTimeoutUpdated(uint256)
+          handler: handleMinArbitrationFeeTimeoutUpdated
+        - event: Mint(indexed address,uint256,string,uint256,uint256)
+          handler: handleMint
+        - event: MintFeeUpdated(uint256)
+          handler: handleMintFeeUpdated
+        - event: MintStatusUpdated(uint8)
+          handler: handleMintStatusUpdated
+        - event: OriginServiceFeeRateUpdated(uint256,uint16)
+          handler: handleOriginServiceFeeRateUpdated
+        - event: OriginValidatedProposalFeeRateUpdated(uint256,uint16)
+          handler: handleOriginValidatedProposalFeeRateUpdated
+        - event: ProposalPostingFeeUpdated(uint256,uint256)
+          handler: handleProposalPostingFeeUpdated
+        - event: RoleAdminChanged(indexed bytes32,indexed bytes32,indexed bytes32)
+          handler: handleRoleAdminChanged
+        - event: RoleGranted(indexed bytes32,indexed address,indexed address)
+          handler: handleRoleGranted
+        - event: RoleRevoked(indexed bytes32,indexed address,indexed address)
+          handler: handleRoleRevoked
+        - event: ServicePostingFeeUpdated(uint256,uint256)
+          handler: handleServicePostingFeeUpdated
+        - event: SignerUpdated(uint256,address)
+          handler: handleSignerUpdated
+        - event: Transfer(indexed address,indexed address,indexed uint256)
+          handler: handleTransfer
         - event: Upgraded(indexed address)
           handler: handleUpgraded
+        - event: UserWhitelisted(indexed address)
+          handler: handleUserWhitelisted
       file: ./src/contract.ts
