--- a/dapp/.env.example
+++ b/dapp/.env.example
@@ -52,3 +52,6 @@ NEXT_PUBLIC_WEB3MAIL_PLATFORM_PUBLIC_KEY="0x27FDabe8222d7f874406F3EaBBb9601D87EF
 NEXT_PUBLIC_WEB3MAIL_APP_ADDRESS="web3mail.apps.iexec.eth"
 CRON_SECRET="xxx"
 NEXT_WEB3MAIL_RETRY_FACTOR=5
+
+# ========== WORLDCOIN ==============
+NEXT_PUBLIC_WLD_APP_ID=xxx
