--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -6,7 +6,7 @@ features:
 dataSources:
   - kind: ethereum/contract
     name: TalentLayerID
-    network: matic
+    network: mumbai
     source:
       abi: TalentLayerID
       address: "0xD7D1B2b0A665F03618cb9a45Aa3070f789cb91f2"
@@ -44,7 +44,7 @@ dataSources:
       file: ./src/mappings/talent-layer-id.ts
   - kind: ethereum/contract
     name: TalentLayerReview
-    network: matic
+    network: mumbai
     source:
       abi: TalentLayerReview
       address: "0x7bBC20c8Fcb75A126810161DFB1511f6D3B1f2bE"
@@ -70,7 +70,7 @@ dataSources:
       file: ./src/mappings/talent-layer-review.ts
   - kind: ethereum/contract
     name: TalentLayerService
-    network: matic
+    network: mumbai
     source:
       abi: TalentLayerService
       address: "0xae8Bba1a403816568230d92099ccB87f41BbcA78"
@@ -104,7 +104,7 @@ dataSources:
       file: ./src/mappings/talent-layer-service.ts
   - kind: ethereum/contract
     name: TalentLayerEscrow
-    network: matic
+    network: mumbai
     source:
       abi: TalentLayerEscrow
       address: "0x21C716673897f4a2A3c12053f3973F51Ce7b0cf6"
@@ -155,7 +155,7 @@ dataSources:
       file: ./src/mappings/talent-layer-escrow.ts
   - kind: ethereum/contract
     name: TalentLayerPlatformID
-    network: matic
+    network: mumbai
     source:
       abi: TalentLayerPlatformID
       address: "0x09FF07297d48eD9aD870caCE4b33BF30869C1D17"
@@ -199,6 +199,40 @@ dataSources:
         - event: SignerUpdated(uint256,address)
           handler: handleSignerUpdated
       file: ./src/mappings/talent-layer-platform-id.ts
+  - kind: ethereum/contract
+    name: MagicLamp
+    network: mumbai
+    source:
+      abi: MagicLamp
+      address: "0xBAdaF09400F111145450f0E6036f041051BD862F"
+      startBlock: 42521439
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.6
+      language: wasm/assemblyscript
+      entities:
+        - Genie
+        - Rating
+        - Wish
+      abis:
+        - name: MagicLamp
+          file: ./abis/MagicLamp.json
+      eventHandlers:
+        - event: NewGenie(uint256,address,address,uint256,uint256,string,string,string)
+          handler: handleNewGenie
+        - event: NewRating(uint256,address,uint8)
+          handler: handleNewRating
+        - event: NewWish(uint256,uint256,uint256,uint256,uint256,uint256)
+          handler: handleNewWish
+        - event: OwnershipTransferred(indexed address,indexed address)
+          handler: handleOwnershipTransferred
+        - event: UpdateRating(uint256,address,uint8,int8)
+          handler: handleUpdateRating
+        - event: WishCancelled(uint256)
+          handler: handleWishCancelled
+        - event: WishCompleted(uint256)
+          handler: handleWishCompleted
+      file: ./src/mappings/magic-lamp.ts
 templates:
   - name: ServiceData
     kind: file/ipfs
@@ -214,7 +248,7 @@ templates:
       abis:
         - name: TalentLayerService
           file: ./abis/TalentLayerService.json
-    network: matic
+    network: mumbai
   - name: ProposalData
     kind: file/ipfs
     mapping:
@@ -227,7 +261,7 @@ templates:
       abis:
         - name: TalentLayerService
           file: ./abis/TalentLayerService.json
-    network: matic
+    network: mumbai
   - name: ReviewData
     kind: file/ipfs
     mapping:
@@ -240,7 +274,7 @@ templates:
       abis:
         - name: TalentLayerReview
           file: ./abis/TalentLayerReview.json
-    network: matic
+    network: mumbai
   - name: UserData
     kind: file/ipfs
     mapping:
@@ -255,7 +289,7 @@ templates:
       abis:
         - name: TalentLayerID
           file: ./abis/TalentLayerID.json
-    network: matic
+    network: mumbai
   - name: PlatformData
     kind: file/ipfs
     mapping:
@@ -268,7 +302,7 @@ templates:
       abis:
         - name: TalentLayerPlatformID
           file: ./abis/TalentLayerPlatformID.json
-    network: matic
+    network: mumbai
   - name: EvidenceData
     kind: file/ipfs
     mapping:
@@ -281,4 +315,4 @@ templates:
       abis:
         - name: TalentLayerEscrow
           file: ./abis/TalentLayerEscrow.json
-    network: matic
+    network: mumbai
