add logo and stuff

--- a/dapp/vercel.json
+++ b/dapp/vercel.json
@@ -1,24 +1,24 @@
 {
-  "crons":[
+  "crons": [
     {
-      "path":"/api/web3mail/new-proposal",
-      "schedule":"*/5 * * * *"
+      "path": "/api/web3mail/new-proposal",
+      "schedule": "0 0 * * 1"
     },
     {
-      "path":"/api/web3mail/proposal-validated",
-      "schedule":"*/5 * * * *"
+      "path": "/api/web3mail/proposal-validated",
+      "schedule": "0 0 * * 1"
     },
     {
-      "path":"/api/web3mail/fund-release",
-      "schedule":"*/5 * * * *"
+      "path": "/api/web3mail/fund-release",
+      "schedule": "0 0 * * 1"
     },
     {
-      "path":"/api/web3mail/review",
-      "schedule":"*/5 * * * *"
+      "path": "/api/web3mail/review",
+      "schedule": "0 0 * * 1"
     },
     {
-      "path":"/api/web3mail/new-service",
-      "schedule":"*/5 * * * *"
+      "path": "/api/web3mail/new-service",
+      "schedule": "0 0 * * 1"
     }
   ]
 }
