--- a/dapp/package.json
+++ b/dapp/package.json
@@ -8,7 +8,7 @@
     "@iexec/dataprotector": "0.1.2",
     "@iexec/web3mail": "0.5.1",
     "@leap-ai/sdk": "^0.0.119",
-    "@talentlayer/client": "^0.1.6",
+    "@genieai/tl-client": "^0.1.11",
     "@web3modal/ethereum": "^2.7.1",
     "@web3modal/react": "^2.7.1",
     "@worldcoin/idkit": "^0.5.1",
