--- a/dapp/.env.example
+++ b/dapp/.env.example
@@ -55,3 +55,7 @@ NEXT_WEB3MAIL_RETRY_FACTOR=5
 
 # ========== WORLDCOIN ==============
 NEXT_PUBLIC_WLD_APP_ID=xxx
+
+# ========== IEXEC ==============
+NEXT_PUBLIC_IEXEC_APP_ADDRESS=xxx
+NEXT_PUBLIC_IEXEC_APP_PLATFORM_PUBLIC_KEY=xxx
