--- a/dapp/.env.example
+++ b/dapp/.env.example
@@ -59,3 +59,7 @@ NEXT_PUBLIC_WLD_APP_ID=xxx
 # ========== IEXEC ==============
 NEXT_PUBLIC_IEXEC_APP_ADDRESS=xxx
 NEXT_PUBLIC_IEXEC_APP_PLATFORM_PUBLIC_KEY=xxx
+
+# ========== FILECOIN ==============
+FILECOIN_EMAIL=xxx
+FILECOIN_SPACE_KEY=xxx
