--- a/dapp/.env.example
+++ b/dapp/.env.example
@@ -59,6 +59,7 @@ NEXT_PUBLIC_WLD_APP_ID=xxx
 # ========== IEXEC ==============
 NEXT_PUBLIC_IEXEC_APP_ADDRESS=xxx
 NEXT_PUBLIC_IEXEC_APP_PLATFORM_PUBLIC_KEY=xxx
+NEXT_IEXEC_APP_PLATFORM_PRIVATE_KEY=xxx
 
 # ========== FILECOIN ==============
 FILECOIN_EMAIL=xxx
